Added callbackUrl and csrftoken to timer class and simulated callback functionality by sending a post request to my new test controller
